Change designy stuff
Add custom fonts, adjust font sizes and work around white space.
Additionally, reworked responsive sizing and positioning.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Home
 				<h2>About #fstoco</h2>
 				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX and visual designs, project management, and product development.</p>
 			</div>
+			<div class="col-md-1"></div>
 			<div class="col-md-3">
 				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" /><img src="/static/images/watch-img.png" alt="Watch 2014 Videos" class="img-responsive wow tada" /></a></p>
 				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from the 2015 conference to get a taste before you buy!</a>
