--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
 				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" /><img src="/static/images/watch-img.png" alt="Watch 2014 Videos" class="img-responsive wow tada" /></a></p>
-				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from the 2015 conference to get a taste before you buy!</a>
+				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from 2015 to get a taste of the conference before you buy!</a>
 			</div>
 		</div>
 	</div>
@@ -72,14 +72,13 @@ title: Home
 </section>
 <section>
 	<div class="container">
+		<div class="row"><h2>Help Us</h2></div>
 		<div class="row">
 			<div class="col-md-3">
-				<h2>Help Us</h2>
 				<p><a href="/static/fstoco-sponsorship.pdf"><img src="/static/images/sponsor-deck.png" alt="Download the 2016 Sponsorship Deck" class="img-responsive wow tada" /></a></p>
 				<p>Download the <a href="/static/fstoco-sponsorship.pdf">2016 Sponsorship Deck</a> and get your name out there today!</p>
 			</div>
 			<div class="col-sm-12 col-md-8">
-				<h2>&nbsp;</h2>
 				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing lunch and a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
 			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p> 
 				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
