--- a/speak/index.html
+++ b/speak/index.html
@@ -32,7 +32,7 @@ title: Speak
 			</div>
 			<div class="col-sm-12 col-md-6">
 				<h2>What you get</h2>
-				<p>All speakers at #fstoco will be paid a base honorarium of $1000CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursement will only happen if you book through our travel and lodging partners, while some few exceptions can be made for those unable to book with them. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
+				<p>All speakers at #fstoco will be paid a base honorarium of $500CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursement will only happen if you book through our travel and lodging partners, while some few exceptions can be made for those unable to book with them. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
 				<p>We are fully invested in increasing the diversity at our events, we grant a 10% bonus over the base compensation to every speaker coming from typically underrepresented demographics.</p>
 			</div>
 		</div>
