social card fix

--- a/speak/index.html
+++ b/speak/index.html
@@ -99,7 +99,7 @@ title: Speak
 		<div class="row">
 			<div class="col-sm-12">
 				<h2>Ready to submit?</h2>
-				<p>Please fill in this google form the best you can, the more information the better!</p><!-- in the form, discipline or specialty should be added to concentration. It's less local-specific -->
+				<p>Please fill in this google form the best you can, the more information the better!</p>
 				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="4000" frameborder="0">Loading...</iframe>
 			</div>
 		</div>
