Change CSS Responsiveness
Removed JS that was modifying CSS, adjusted sizes manually with Media queries.
-----
Added little script to hide menu on scroll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
 		</div>
 	</div>
 </section>
-<section>
+<section class="attending">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-4 paper">
@@ -72,7 +72,7 @@ title: Home
 </section>
 <section>
 	<div class="container">
-		<div class="row"><h2>Help Us</h2></div>
+		<div class="row"><h2>How you can help us</h2></div>
 		<div class="row">
 			<div class="col-md-3">
 				<p><a href="/static/fstoco-sponsorship.pdf"><img src="/static/images/sponsor-deck.png" alt="Download the 2016 Sponsorship Deck" class="img-responsive wow tada" /></a></p>
