speaking and info bar

--- a/speak/index.html
+++ b/speak/index.html
@@ -40,6 +40,7 @@ title: Speak
 			<div class="col-sm-12">
 				<h3>Pay Structure</h3>
 				<p>Here is an outline of how we plan to pay our speakers. Do note that reimbursment for travel and lodging will only be made availble to those who book with our partners. If your company has a no-payment policy or would pay your way for us, which gives us more funds to put towards and awesome event, we will offer them a free logo spot in our partners section. These numbers are subject to change without notice and do not act as a contract.</p>
+				<p>We know that some organizations don't allow for you to be paid to speak, and we know that some organizations are open to paying their employees way to speak at our events. If you fall into one of these categories, or would like to willfully decline compensation we will offer your company logo recognition on our site as a speaker sponsor</p>
 			</div>
 			<div class="col-md-2">
 				<h4>Regional (GTHA)</h4>
