--- a/speak/index.html
+++ b/speak/index.html
@@ -17,7 +17,7 @@ title: Speak
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-6">
+			<div class="col-sm-12 col-md-4">
 				<h2>Hybrid Session Model</h2>
 				<p>To meet the hybrid session model your talk must adhere to the following:<p>
 				<ul>
@@ -30,10 +30,15 @@ title: Speak
 					<li>Free of commercial content, no in-depths of paid products or services, no promoting your employer</li>
 				</ul>
 			</div>
-			<div class="col-sm-12 col-md-6">
+			<div class="col-sm-12 col-md-4">
 				<h2>What you get</h2>
 				<p>All speakers at #fstoco will be paid a base honorarium of $500CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursement will only happen if you book through our travel and lodging partners, while some few exceptions can be made for those unable to book with them. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
 				<p>We are fully invested in increasing the diversity at our events, we grant a 10% bonus over the base compensation to every speaker coming from typically underrepresented demographics.</p>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h2>Who Should Submit?</h2>
+				<p>You, yes you, no matter what, you can be a tech speaker! We encourage everyone who has an idea for a talk to submit, we will help you ever step of the way to make it great, even making your submission better before we send it through our review process. We encourage under represented demographics to submit as well, we have and enforce a code of conduct to protect you and our attendees, and we have high standards for the type of content that is accepted in talks with our non-commercial policy and guidelines for creating a great talk.</p>
+				<p>Everyone is welcome to submit, if you sell us on the idea, we will help you develop it into an amazing talk!</p>
 			</div>
 		</div>
 		<div class="row">
