--- a/speak/index.html
+++ b/speak/index.html
@@ -18,7 +18,7 @@ title: Speak
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
-				<h2>Hybrid Session Model</h2>
+				<h2>Hybrid Sessions</h2>
 				<p>To meet the hybrid session model your talk must adhere to the following:<p>
 				<ul>
 					<li>Be 30 minutes in length</li>
@@ -32,21 +32,31 @@ title: Speak
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h2>What you get</h2>
-				<p>All speakers at #fstoco will be paid a base honorarium of $500CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursement will only happen if you book through our travel and lodging partners, while some few exceptions can be made for those unable to book with them. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
+				<p>All speakers at #fstoco will be paid a base honorarium of $500CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
 				<p>We are fully invested in increasing the diversity at our events, we grant a 10% bonus over the base compensation to every speaker coming from typically underrepresented demographics.</p>
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h2>Who Should Submit?</h2>
 				<p>You, yes you, no matter what, you can be a tech speaker! We encourage everyone who has an idea for a talk to submit, we will help you ever step of the way to make it great, even making your submission better before we send it through our review process. We encourage under represented demographics to submit as well, we have and enforce a code of conduct to protect you and our attendees, and we have high standards for the type of content that is accepted in talks with our non-commercial policy and guidelines for creating a great talk.</p>
-				<p>Everyone is welcome to submit, if you sell us on the idea, we will help you develop it into an amazing talk!</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-12 col-md-8">
 				<h3>Pay Structure</h3>
 				<p>Here is an outline of how we plan to pay our speakers. Do note that reimbursment for travel and lodging will only be made availble to those who book with our partners. If your company has a no-payment policy or would pay your way for us, which gives us more funds to put towards and awesome event, we will offer them a free logo spot in our partners section. These numbers are subject to change without notice and do not act as a contract.</p>
 				<p>We know that some organizations don't allow for you to be paid to speak, and we know that some organizations are open to paying their employees way to speak at our events. If you fall into one of these categories, or would like to willfully decline compensation we will offer your company logo recognition on our site as a speaker sponsor</p>
 			</div>
+			<div class="col-sm-12 col-md-4">
+				<h3>Key Dates</h3>
+				<ul>
+					<li>January 1st 2016 - CFP Opens</li>
+					<li>April 1st 2016 to July 31st - Select Sessions Announced</li>
+					<li>July 31st 2016 - CFP Closes</li>
+					<li>August 15th 2016 - All Sessions Announced</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
 			<div class="col-md-2">
 				<h4>Regional (GTHA)</h4>
 				<ul>
@@ -106,7 +116,7 @@ title: Speak
 			<div class="col-sm-12">
 				<h2>Ready to submit?</h2>
 				<p>Please fill in this google form the best you can, the more information the better!</p>
-				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="4000" frameborder="0">Loading...</iframe>
+				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="4250" frameborder="0">Loading...</iframe>
 			</div>
 		</div>
 	</div>
