--- a/speak/index.html
+++ b/speak/index.html
@@ -32,7 +32,7 @@ title: Speak
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h2>What you get</h2>
-				<p>All speakers at #fstoco will be paid a base honorarium of $500CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
+				<p>All speakers at #fstoco will be paid a base honorarium of $500CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. You must provide all receipts and an invoice within 30 days of the end of the event in order to be reimbursed.</p>
 				<p>We are fully invested in increasing the diversity at our events, we grant a 10% bonus over the base compensation to every speaker coming from typically underrepresented demographics.</p>
 			</div>
 			<div class="col-sm-12 col-md-4">
@@ -43,8 +43,7 @@ title: Speak
 		<div class="row">
 			<div class="col-sm-12 col-md-8">
 				<h3>Pay Structure</h3>
-				<p>Here is an outline of how we plan to pay our speakers. Do note that reimbursment for travel and lodging will only be made availble to those who book with our partners. If your company has a no-payment policy or would pay your way for us, which gives us more funds to put towards and awesome event, we will offer them a free logo spot in our partners section. These numbers are subject to change without notice and do not act as a contract.</p>
-				<p>We know that some organizations don't allow for you to be paid to speak, and we know that some organizations are open to paying their employees way to speak at our events. If you fall into one of these categories, or would like to willfully decline compensation we will offer your company logo recognition on our site as a speaker sponsor</p>
+				<p>Here is an outline of how we plan to pay our speakers. We know that some organizations don't allow for you to be paid to speak, and we know that some organizations are open to paying their employees way to speak at our events. If you fall into one of these categories, or would like to willfully decline compensation we will offer your company name recognition on our site as a speaker sponsor</p>
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h3>Key Dates</h3>
@@ -110,6 +109,11 @@ title: Speak
 					<li>Travel assistance - Max $2500</li>
 					<li>Lodging assistance (4 nights) - Max $1200</li>
 				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<p>Please note: Residents of Canada must invoice Full Stack Toronto to be paid and take care of taxes on their personal returns. Non-residents of Canada must invoice and will be subject to tax witholding laws in Canada and may not recieve the entire payment amount, but will recieve a tax slip for your local tax proccessing. All invoices must come with all reciepts to prove expenses.</p>
 			</div>
 		</div>
 		<div class="row">
