--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ title: Home
 			<div class="col-md-6">
 				<h2>What's Included</h2>
 				<p>Building on the same great perks of last year this year's new addition is "passion talks", unorganized by us coordinated by you! There will be a special place for you to show and talk about your passion at this years conference, we will also show it off on your badge to help with networking during the breaks!</p>
-				<p>We are also adding lunch this year! That's right, food! Enjoy a delicious meal while listening to some passion talks or while networking with others, we will be here to help you find the best table!</p>
 				<p>All sessions will be recorded, slides collected and posted online after the event for you to reference in the future.</p>
 				<p>We have a convenient mobile app to help you plan your conference schedule and experience.</p>
 				<p>Last but not least, who doesn't like a good party!? At the end of each day we will all gather for some light refreshments &amp; cocktails, and of course talk about what you have learned and how you are going to implement it back at work.</p>
@@ -79,7 +78,7 @@ title: Home
 				<p>Download the <a href="/static/fstoco-sponsorship.pdf">2016 Sponsorship Deck</a> and get your name out there today!</p>
 			</div>
 			<div class="col-sm-12 col-md-8">
-				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing lunch and a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
+				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
 			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p> 
 				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
 			</div>
