--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
-				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" /><img src="/static/images/watch-img.png" alt="Watch 2014 Videos" class="img-responsive wow tada" /></a></p>
+				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" /><img src="/static/images/watch-img.png" alt="Watch 2014 Videos" class="img-responsive" /></a></p>
 				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from 2015 to get a taste of the conference before you buy!</a>
 			</div>
 		</div>
@@ -21,17 +21,17 @@ title: Home
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-4 paper">
-				<i class="fa fa-4x fa-users wow bounceIn"></i>
+				<i class="fa fa-4x fa-users"></i>
 				<h2>Who Should Attend</h2>
 				<p>If you work in the web industry #fstoco is for you! Every year, we bring together the world's brightest minds in the business to present on relevant topics with real-life applications. You will go back to work not only knowing how to do the latest and greatest, but most importantly the why.</p>
 			</div>
 			<div class="col-sm-12 col-md-4 paper">
-				<i class="fa fa-4x fa-hand-spock-o wow bounceIn"></i>
+				<i class="fa fa-4x fa-hand-spock-o"></i>
 				<h2>Why You Should Attend</h2>
 				<p>We believe that to become a better professional, you need to understand what the other members of your team are doing. We've planned our content schedule so that you can participate in your concentration/discipline or learn from others to further your career growth.</p>
 			</div>
 			<div class="col-sm-12 col-md-4 paper">
-				<i class="fa fa-4x fa-user-secret wow bounceIn"></i>
+				<i class="fa fa-4x fa-user-secret"></i>
 				<h2>Who's Attending</h2>
 				<p>Content is king. We strongly believe in NOT selling you our event based on any given speakers or their affiliations (i.e. Google, Microsoft, etc. - but to be frank, these people do actually tend to speak at our events). We are devoted to providing you unbiased, good content first. Check out the <a href="/schedule">schedule</a> we have planned for you</p>
 			</div>
@@ -74,7 +74,7 @@ title: Home
 		<div class="row"><h2>How you can help us</h2></div>
 		<div class="row">
 			<div class="col-md-3">
-				<p><a href="/static/fstoco-sponsorship.pdf"><img src="/static/images/sponsor-deck.png" alt="Download the 2016 Sponsorship Deck" class="img-responsive wow tada" /></a></p>
+				<p><a href="/static/fstoco-sponsorship.pdf"><img src="/static/images/sponsor-deck.png" alt="Download the 2016 Sponsorship Deck" class="img-responsive" /></a></p>
 				<p>Download the <a href="/static/fstoco-sponsorship.pdf">2016 Sponsorship Deck</a> and get your name out there today!</p>
 			</div>
 			<div class="col-sm-12 col-md-8">
