--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@ title: Home
 				<p>All of our sessions at #fstoco follow a hybrid session model where the speakers will deliver the best in practical web solutions with real-life examples free of commercial content (no sponsored content or sales pitches here). This is the kind of learning that you can put into action the moment you return to work.</p>
 				<p>All sessions are followed by open Q&amp;As with the speaker to help improve your practice of their idea. The speakers are also web professionals just like you! Like you, they personally deal with these problems and solutions daily so don't be shy. Ask away!</p>
 				<p>Our keynotes are here to inspire, challenge and provide you with more than hard-skills to take back to the office. These, along with lots of coffee will get your day kickstarted!</p>
-				<p>Furthermore, going to any conference is more than just sitting and listening to awesome talks, it's also about fostering valuable relationships to move your career forward and help you out when needed. We know "networking" can be difficult and we are here to help! We also know that when you're passionate about something you can talk about it endlessly so we are all about you sharing your passion! There is plenty of break time and we absolutely encourage our attendees to get to know each other between all sessions.</p>
+				<p>Furthermore, going to any conference is more than just sitting and listening to awesome talks, it's also about fostering valuable relationships to move your career forward and help you out when needed. We know "networking" can be difficult and we are here to help, we know that when you're passionate about something you can talk about it endlessly so we're going to show it off on your badge to help you start conversations. There is plenty of break time and we absolutely encourage you to get to know each other between all the awesome sessions.</p>
 			</div>
 			<div class="col-md-6">
 				<h2>What's Included</h2>
 				<p>Building on the same great perks of last year this year's new addition is "passion talks", unorganized by us coordinated by you! There will be a special place for you to show and talk about your passion at this years conference, we will also show it off on your badge to help with networking during the breaks!</p>
 				<p>All sessions will be recorded, slides collected and posted online after the event for you to reference in the future.</p>
 				<p>We have a convenient mobile app to help you plan your conference schedule and experience.</p>
-				<p>Last but not least, who doesn't like a good party!? At the end of each day we will all gather for some light refreshments &amp; cocktails, and of course talk about what you have learned and how you are going to implement it back at work.</p>
+				<p>Last but not least, who doesn't like a good party!? At the end of the first day we will all gather for some light refreshments &amp; cocktails, and of course talk about what we have learned and how we are going to implement it back at work.</p>
 				<p>Oh! and heaps of #SWAG, don't forget about that!</p>
 			</div>
 		</div>
