--- a/speak/index.html
+++ b/speak/index.html
@@ -44,6 +44,7 @@ title: Speak
 			<div class="col-sm-12 col-md-8">
 				<h3>Pay Structure</h3>
 				<p>Here is an outline of how we plan to pay our speakers. We know that some organizations don't allow for you to be paid to speak, and we know that some organizations are open to paying their employees way to speak at our events. If you fall into one of these categories, or would like to willfully decline compensation we will offer your company name recognition on our site as a speaker sponsor</p>
+				<p><strong>Full Stack Toronto is a non-profit organization that operates on a cost recovery bases, if you can help us reduce costs by volunteering your speaking time and declining compensation it helps us emensley. We offer logo placement for your company when they help pay your way.</strong></p>
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h3>Key Dates</h3>
@@ -57,7 +58,7 @@ title: Speak
 		</div>
 		<div class="row">
 			<div class="col-md-2">
-				<h4>Regional (GTHA)</h4>
+				<h4>Regional (GTHA) (3 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -66,7 +67,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>Ontario &amp; Qu&eacute;bec</h4>
+				<h4>Ontario &amp; Qu&eacute;bec (4 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -75,7 +76,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>Rest of Canada</h4>
+				<h4>Rest of Canada (4 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -84,7 +85,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>The Americas</h4>
+				<h4>The Americas (3 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -93,7 +94,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>Afro-EurAsia</h4>
+				<h4>Afro-EurAsia (0 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -102,7 +103,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>AustralAsia</h4>
+				<h4>AustralAsia (0 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity Bonus - $50</li>
