--- a/speak/index.html
+++ b/speak/index.html
@@ -37,14 +37,14 @@ title: Speak
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h2>Who Should Submit?</h2>
-				<p>You, yes you, no matter what, you can be a tech speaker! We encourage everyone who has an idea for a talk to submit, we will help you ever step of the way to make it great, even making your submission better before we send it through our review process. We encourage under represented demographics to submit as well, we have and enforce a code of conduct to protect you and our attendees, and we have high standards for the type of content that is accepted in talks with our non-commercial policy and guidelines for creating a great talk.</p>
+				<p>You, yes you, no matter what, you can be a tech speaker! We encourage everyone who has an idea for a talk to submit, we will help you every step of the way to make it great, even making your submission better before we send it through our review process. We encourage underrepresented demographics to submit as well, we have and enforce a code of conduct to protect you and our attendees, and we have high standards for the type of content that is accepted in talks with our non-commercial policy and guidelines for creating a great talk.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12 col-md-8">
 				<h3>Pay Structure</h3>
 				<p>Here is an outline of how we plan to pay our speakers. We know that some organizations don't allow for you to be paid to speak, and we know that some organizations are open to paying their employees way to speak at our events. If you fall into one of these categories, or would like to willfully decline compensation we will offer your company name recognition on our site as a speaker sponsor</p>
-				<p><strong>Full Stack Toronto is a non-profit organization that operates on a cost recovery bases, if you can help us reduce costs by volunteering your speaking time and declining compensation it helps us emensley. We offer logo placement for your company when they help pay your way.</strong></p>
+				<p><strong>Full Stack Toronto is a non-profit organization that operates on a cost recovery basis, if you can help us reduce costs by volunteering your speaking time and declining compensation it helps us immensely. We offer logo placement for your company when they help pay your way.</strong></p>
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h3>Key Dates</h3>
@@ -85,7 +85,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>The Americas (1 Paid Spots Left)</h4>
+				<h4>The Americas (0 Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -114,14 +114,14 @@ title: Speak
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<p>Please note: Residents of Canada must invoice Full Stack Toronto to be paid and take care of taxes on their personal returns. Non-residents of Canada must invoice and will be subject to tax witholding laws in Canada and may not recieve the entire payment amount, but will recieve a tax slip for your local tax proccessing. All invoices must come with all reciepts to prove expenses.</p>
+				<p>Please note: Residents of Canada must invoice Full Stack Toronto to be paid and take care of taxes on their personal returns. Non-residents of Canada must invoice and will be subject to tax withholding laws in Canada and may not receive the entire payment amount, but will receive a tax slip for your local tax processing. All invoices must come with all receipts to prove expenses.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
 				<h2>Ready to submit?</h2>
-				<p>Please fill in this google form the best you can, the more information the better!</p>
-				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="4250" frameborder="0">Loading...</iframe>
+				<p>Please fill in the form over at PaperCall.io</p>
+				<p><a href="https://www.papercall.io/fstoco2016" class="btn" target="_blank">Submit A Talk</a>
 			</div>
 		</div>
 	</div>
