--- a/speak/index.html
+++ b/speak/index.html
@@ -121,7 +121,7 @@ title: Speak
 			<div class="col-sm-12">
 				<h2>Ready to submit?</h2>
 				<p>Please fill in the form over at PaperCall.io</p>
-				<p><a href="https://www.papercall.io/fstoco2016" class="btn" target="_blank">Submit A Talk</a>
+				<p><a href="https://www.papercall.io/fstoco2016" class="btn btn-success btn-lg" target="_blank">Submit A Talk</a>
 			</div>
 		</div>
 	</div>
