--- a/speak/index.html
+++ b/speak/index.html
@@ -58,7 +58,7 @@ title: Speak
 		</div>
 		<div class="row">
 			<div class="col-md-2">
-				<h4>Regional (GTHA) (3 Paid Spots Left)</h4>
+				<h4>Regional (GTHA) (Limited Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -67,7 +67,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>Ontario &amp; Qu&eacute;bec (3 Paid Spots Left)</h4>
+				<h4>Ontario &amp; Qu&eacute;bec (Limited Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
@@ -76,7 +76,7 @@ title: Speak
 				</ul>
 			</div>
 			<div class="col-md-2">
-				<h4>Rest of Canada (5 Paid Spots Left)</h4>
+				<h4>Rest of Canada (Limited Paid Spots Left)</h4>
 				<ul>
 					<li>Base - $500</li>
 					<li>Diversity bonus - $50</li>
