--- a/index.html
+++ b/index.html
@@ -73,13 +73,9 @@ title: Home
 	<div class="container">
 		<div class="row"><h2>How you can help us</h2></div>
 		<div class="row">
-			<div class="col-md-3">
-				<p><a href="/static/fstoco-sponsorship.pdf"><img src="/static/images/sponsor-deck.png" alt="Download the 2016 Sponsorship Deck" class="img-responsive" /></a></p>
-				<p>Download the <a href="/static/fstoco-sponsorship.pdf">2016 Sponsorship Deck</a> and get your name out there today!</p>
-			</div>
 			<div class="col-sm-12 col-md-8">
 				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
-			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p> 
+			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship deck</a></p> 
 				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
 			</div>
 		</div>
