--- a/schedule/index.html
+++ b/schedule/index.html
@@ -13,16 +13,16 @@ title: Schedule
     <div class="day1">
       <h2>Monday, Oct. 17th</h2>
       <div class="sessions-holder">
-          
+
       </div>
     </div>
     <div class="day2">
       <h2>Tuesday, Oct. 18th</h2>
       <div class="sessions-holder">
-          
+
       </div>
     </div>
   </div>
   <!--  <script src="//code.jquery.com/jquery-1.12.0.min.js" async></script>-->
-  <script src="/js/apis.js" async defer></script>
+  <script src="/js/apis.js?v2" async defer></script>
 </section>
