--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@ title: Home
 </section>
 <section>
 	<div class="container">
-		<div class="row"><h2>How you can help us</h2></div>
+		<div class="row"><h2>Sponsor us</h2></div>
 		<div class="row">
+			<div class="col-sm-12 col-md-4">
+				<a href="https://www.sponseasy.com/p/full-stack-toronto-conference"><img src="/static/images/sponsor-deck.png" alt="Sponsor Us" class="img-responsive" /></a>
+			</div>
 			<div class="col-sm-12 col-md-8">
 				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
-			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship deck</a></p> 
+			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship site</a></p>
 				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
 			</div>
 		</div>
