--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: Schedule
+js:
+  - jquery.min
+  - schedule.min
+  - speakers.min
 ---
 
 <section id="schedule-content">
@@ -23,6 +27,4 @@ title: Schedule
       </div>
     </div>
   </div>
-  <!--  <script src="//code.jquery.com/jquery-1.12.0.min.js" async></script>-->
-  <script src="/js/apis.js?v9" async defer></script>
 </section>
