--- a/speakers/index.html
+++ b/speakers/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Speakers
+js:
+  - jquery.min
+  - speakers.min
 ---
 
 <section id="speakers">
@@ -10,12 +13,6 @@ title: Speakers
     </div>
     <div class="speakerBundle">
 
-    </div>    
+    </div>
   </div>
-<!--  <script src="//code.jquery.com/jquery-1.12.0.min.js" async></script>-->
-  <script src="/js/apis.js" async defer></script>
 </section>
-
-
-
-
