--- a/info/index.html
+++ b/info/index.html
@@ -68,21 +68,18 @@ title: The Venue, Host Hotel, and Travel Deals!
 	<div class="row">
 		<div class="col-sm-12">
 			<h2>While in Toronto</h2>
-			<h3>LANGUAGES SPOKEN</h3>
-			<p>There are two official Canadian languages – English and French. In addition to these, the top five languages spoken in Toronto are Chinese, Italian, Tamil, Portuguese and Spanish.</p>
-
-			<h3>MONEY MATTERS</h3>
+			<h3>Money</h3>
 			<p>Toronto’s currency is the Canadian dollar. For denominations under five dollars we use coins – some we’ve even given cute names: the loonie ($1), and toonie ($2).
 			<p>Since 2013 our bills have been made of polymer and have a number of interesting design elements.
 				U.S. dollars are accepted in many Toronto establishments, although you’ll receive change in Canadian funds and exchange rates will differ from merchant to merchant</p>
 				<p>You’ll find cash machines/ATMs all over the city and in most banks, hotels and shopping centres
 					Credit cards are accepted at all major retailers.
 					Currency exchange is available at kiosks in the city and at the airport</p>
-				<h3>TIPPING</h3>
+				<h3>Tipping</h3>
 				<p>If you’re happy with the service you receive, a 20% tip is standard on the pre-tax bill is a standard expression of appreciation when dining out in the city. Note that some restaurants automatically add this gratuity when serving large groups, so be sure to check your bill.</p>
 				<p>Tips are also expected for services such as haircuts, shoe shines and taxi rides. 15-20% is standard in these situations as well.</p>
 
-				<h3>TAXES</h3>
+				<h3>Taxes</h3>
 				<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion. - See more at: http://www.seetorontonow.com/while-youre-here/#sthash.0Ilp093b.dpuf </p>
 	</div>
 </section>
