--- a/info/index.html
+++ b/info/index.html
@@ -66,7 +66,7 @@ title: The Venue, Host Hotel, and Travel Deals!
 		</div>
   </div>
 	<div class="row">
-		<div class="col-sm-12">
+		<div class="col-sm-12 col-md-8">
 			<h2>While in Toronto</h2>
 			<h3>Money</h3>
 			<p>Toronto’s currency is the Canadian dollar. For denominations under five dollars we use coins – some we’ve even given cute names: the loonie ($1), and toonie ($2).
@@ -78,8 +78,7 @@ title: The Venue, Host Hotel, and Travel Deals!
 				<h3>Tipping</h3>
 				<p>If you’re happy with the service you receive, a 20% tip is standard on the pre-tax bill is a standard expression of appreciation when dining out in the city. Note that some restaurants automatically add this gratuity when serving large groups, so be sure to check your bill.</p>
 				<p>Tips are also expected for services such as haircuts, shoe shines and taxi rides. 15-20% is standard in these situations as well.</p>
-
 				<h3>Taxes</h3>
-				<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion. - See more at: http://www.seetorontonow.com/while-youre-here/#sthash.0Ilp093b.dpuf </p>
+				<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion.</p>
 	</div>
 </section>
