--- a/info/index.html
+++ b/info/index.html
@@ -80,5 +80,7 @@ title: The Venue, Host Hotel, and Travel Deals!
 				<p>Tips are also expected for services such as haircuts, shoe shines and taxi rides. 15-20% is standard in these situations as well.</p>
 				<h3>Taxes</h3>
 				<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion.</p>
+				<h3>Taxis and Uber</h3>
+				<p>Taxis and UberX in Toronto share the same base fare but differ in service, per kilometer rates and time rates. Both are regulated and able to be used at your discretion.</p>
 	</div>
 </section>
